# vicare-ao

./: ANNOUNCE  Makefile.am  README  configure.ac  configure.sh
doc/: vicare-ao.texi
lib/: dependencies.make  features.c  libraries.scm
lib/vicare/multimedia/: ao.vicare.sls
lib/vicare/multimedia/ao/: cond-expand.sls  constants.vicare.sls.in  unsafe-capi.vicare.sls
meta/scripts/: vicare-template-process-functions
src/: vicare-ao-core.c  vicare-ao-internals.h  vicare-ao-version.c
tests/: demo-for-plain-documentation.sps  test-vicare-ao.sps
